# tesis-arbol-alcanzabilidad

./: .gitignore  README.md  justfile  pyproject.toml
data/nets/: example.json  example.pflow  example.pnml  net_1.json  net_2.json  net_2_split.json  omega_1.json  omega_1.pflow  omega_1.pnml  productor_consumidor.json  productor_consumidor.pflow  productor_consumidor.pnml  productor_consumidor.xml
scripts/: baseline_algorithm.py  dot_to_svg.py  json_parser.py  pflow_to_json.py
src/: baseline_algorithm.py  compare_dot.py  pnml_to_json.py
src/baseline/: baseline.py  parallel.py
src/common/parsing/: json_parser.py  tina_to_dot_graph.py
src/common/petri_net/: engine.py
src/test/: test_engine.py  test_parse_input.py
