[tool.poetry]
name = "tesis-arbol-alcanzabilidad"
version = "0.1.0"
description = ""
authors = ["juan pablo saucedo <juanpablo.saucedo@muttdata.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
xmltodict = "^0.14.2"
pydot = "^3.0.4"
pytest = "^8.3.5"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
